ui and creating task function added

--- a/index.html
+++ b/index.html
@@ -4,6 +4,37 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>To-Do App</title>
+    <link rel="stylesheet" href="style.css" />
   </head>
-  <body></body>
+  <body>
+    <!-- main container -->
+    <div class="container">
+      <!-- to-do header -->
+      <div class="todo-header">
+        <h2>ToDo List</h2>
+        <img src="/images/notebook.gif" alt="notebook" height="50px" />
+      </div>
+
+      <!-- to-do body  -->
+      <div class="todo-body">
+        <input
+          type="text"
+          id="todoText"
+          class="todo-input"
+          placeholder="Add your task"
+        />
+        <img
+          src="./images/plus.png"
+          alt="+"
+          id="AddupdateClick"
+          onclick="CreateTodoItems()"
+        />
+      </div>
+
+      <!-- Todo List -->
+      <h5 id="Alert"></h5>
+      <ul id="list-items" class="list-items"></ul>
+    </div>
+    <script src="script.js"></script>
+  </body>
 </html>
